# region_based_pose_tracking

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment.yaml
config/: camera_rbot.yaml  compute_metrics.yaml  evaluate_bcot.yaml  evaluate_rbot.yaml  track_example_rbot.yaml
configs/modalities/: deep_clines_region_modality.yaml  deep_region_modality.yaml
configs/scripts/: compute_metrics.yaml  evaluate_bcot.yaml  evaluate_rbot.yaml  track_example_bcot.yaml  track_example_rbot.yaml
examples/: example.py  example_rbot.py  test.py
m3t_bindings/: CMakeLists.txt  pyproject.toml
m3t_bindings/include/pym3t/: region_modality_base.h
m3t_bindings/src/pym3t/: pym3t.cpp  region_modality_base.cpp
m3t_ext/: pyproject.toml
m3t_ext/src/pym3t_ext/components/: deep_clines_region_modality.py  deep_region_modality.py  pytracker.py
m3t_ext/src/pym3t_ext/scripts/: compute_metrics.py  evaluate.py  evaluate_rbot.py  example_rbot.py  track.py
m3t_ext/src/pym3t_ext/toolbox/evaluation/: functions.py
m3t_ext/src/pym3t_ext/toolbox/geometry/: camera_geometry.py  metrics.py
m3t_ext/src/pym3t_ext/toolbox/modules/: mobile_sam_module.py  object_segmentation_clines_prediction_module.py  object_segmentation_prediction_module.py  pixel_segmentation_mlp_module.py  probabilistic_segmentation_base.py  probabilistic_segmentation_mlp.py  probabilistic_segmentation_unet.py  simple_resnet_module.py  unet_1d_filmed_module.py
m3t_ext/src/pym3t_ext/toolbox/utils/: crop_object_transform.py  crop_resize_transform.py  match_state_dict.py  partialclass.py  rgb2hsv_torch.py  scenes_models.py
src/: pym3t.cpp
src/pym3t/: __init__.py
